# sirenko-project-bot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
config/: projects.yaml
config/prompts/: dolphin_anty.md  flexify.md  project_alpha.md
src/: auth_setup.py  bootstrap_credentials.py  main.py  settings.py
src/agent/: auth.py  classifier.py  context.py  core.py  prompts.py  summarizer.py  tools.py
src/bot/: keyboards.py  states.py
src/bot/handlers/: approvals.py  auth.py  auth_atlassian.py  auth_slack.py  auth_telegram.py  commands.py  mcp_management.py  planning.py  project_management.py  queries.py
src/bot/middlewares/: auth.py  project_context.py
src/db/: database.py  models.py  queries.py
src/db/migrations/: 001_initial.sql
src/mcp/: client.py  factory.py  manager.py  registry.py  types.py
src/scheduler/: __init__.py  prompts.py  scheduler.py
src/utils/: formatting.py  logging.py  tokens.py
